Fix tab alignment

--- a/src/components/header/HeaderStyles.css
+++ b/src/components/header/HeaderStyles.css
@@ -20,4 +20,5 @@
   letter-spacing: normal;
   padding: 0 0 0 9.6%;
   color: #3b3b3b;
+  overflow-y: hidden;
 }
