--- a/src/components/tabs/TabStyles.css
+++ b/src/components/tabs/TabStyles.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  height: 31px;
 }
 
 .tab {
   width: 98px;
-  height: 31px;
-  /* padding: 3px 0; */
+  height: 100%;
   text-align: center;
   border-radius: 2px;
   border: solid 1px #d6d6d6;
@@ -15,7 +15,7 @@
 
 .tab > span {
   display: inline-flex;
-  height: 28px;
+  height: 100%;
   color: #606060;
   align-items: center;
 }
